--- a/froms/css/styles-text.css
+++ b/froms/css/styles-text.css
@@ -1,3 +1,45 @@
+body {
+  width: 1rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.5;
+  padding: 1rem;
+}
 form {
-  width: 50%;
+  display: flex;
+  width: 50vw;
+  padding: 50vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #f5f5f5;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  display: flex;
+  flex-direction: row;
+}
+input[type="password"],
+input[type="email"] {
+  margin: 5px;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  padding: 0.5rem, 0.7rem;
+  transition: border-color 0.15s, box-shadow 0.15s;
+}
+input[type="password"]:focus,
+input[type="email"]:focus {
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: 0 0 0 4px #b9d3fa;
+}
+button {
+  width: 100px;
+  background-color: #0d6efd;
+  color: #fff;
+  border: 0;
+  padding: 0.5rem 0.7rem;
+  border-radius: 5px;
+  outline: 0;
 }
