till part 29 half done

--- a/seriesch3/css/styles.css
+++ b/seriesch3/css/styles.css
@@ -29,6 +29,7 @@ h2,
 h3 {
   color: var(--color-headings);
   margin-bottom: 1rem;
+  line-height: 1.1;
 }
 h1 {
   /* 1 x font size of the html element */
@@ -578,4 +579,14 @@ a {
   .nav__item {
     border: 0;
   }
+}
+/* Hero */
+.hero__tagline {
+  font-size: 2rem;
+  color: #b9c3cf;
+  letter-spacing: 1px;
+  margin: 2rem 0 5rem;
+}
+.hero__image {
+  width: 100%;
 }
