till 41 part done

--- a/seriesch3/css/styles.css
+++ b/seriesch3/css/styles.css
@@ -170,7 +170,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -219,6 +219,12 @@ a {
   background: var(--color-headings);
   color: #fff;
 }
+
+@media screen and (min-width: 768px) {
+  .input-group .btn {
+    padding: 2rem 4rem;
+  }
+}
 @media screen and (min-width: 1024px) {
   .btn {
     font-size: 1rem;
@@ -245,6 +251,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 .input-group .btn {
   margin: 4px;
@@ -632,6 +639,7 @@ a {
   max-width: 670px;
 }
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 6rem);
@@ -641,6 +649,11 @@ a {
   max-width: 700px;
   margin: 4rem;
   margin: 0 auto;
+}
+@media screen and (max-width: 300px) {
+  .block-domain__prices {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @media screen and (min-width: 768px) {
   .block-domain__prices {
