--- a/demo_web/css/styles.css
+++ b/demo_web/css/styles.css
@@ -9,6 +9,8 @@
 }
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 div {
   display: block;
@@ -28,9 +30,15 @@ form {
   color: #fff;
   background: var(--bg_dark);
 }
+
 .three_block_div {
+  /* max-width: 1020px;
+  margin-left: auto;
+  margin-right: auto; */
   position: relative;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
+  align-self: center;
   grid-column-gap: 40px;
   grid-row-gap: 20px;
   grid-template-rows: auto;
@@ -38,7 +46,7 @@ form {
   grid-auto-columns: 1fr;
   display: grid;
   max-width: auto;
-  margin: 0 53px;
+  margin: 0 30rem;
   box-sizing: border-box;
 }
 .linkedin_divs {
@@ -60,6 +68,15 @@ form {
   position: relative;
   font-size: 0.875rem;
 }
+.linkedin_divs h4 {
+  font-weight: 500;
+  font-size: 0.9rem;
+  color: #b8bfd6;
+}
+.linkedin_divs p {
+  font-weight: 600;
+  font-size: 1.4rem;
+}
 .linkedin__image {
   width: 100%;
   max-width: 2.4rem;
@@ -68,6 +85,7 @@ form {
 .footer__line {
   display: flex;
   justify-content: space-between;
+  margin-top: 40px;
 }
 .dividerline-white {
   background-color: rgba(255, 255, 255, 0.2);
@@ -80,6 +98,18 @@ form {
 }
 .block_one_heading {
   font-weight: bold;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+.block_one_content {
+  font-size: 1rem;
+  color: #b8bfd6;
+  margin-bottom: 1.5rem;
+}
+.footer_inputbutton {
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 3rem;
 }
 .footer_input {
   padding: 8px 12px;
@@ -117,17 +147,35 @@ form {
   overflow: hidden;
   box-shadow: 3px 3px 1px #fff;
   cursor: pointer;
+  height: 2rem;
+  width: 8rem;
 }
 .form-2 {
   grid-column-gap: 10px;
   min-width: 20rem;
   display: flex;
 }
+.footer__content {
+  margin-bottom: 60px;
+  /* display: grid;
+  flex-direction: column;
+  grid-template-columns: 2fr;
+  grid-auto-columns: 1fr; */
+}
 .footer__content_block_one {
   margin-bottom: 15px;
 }
+.footer__content_block_two {
+  /* grid-column-gap: 72px; */
+  /* align-items: flex-start; */
+  /* display: grid; */
+  color: #b8bfd6;
+  /* grid-template-columns: repeat(5, 1fr); */
+}
 .content_block_one {
   margin-bottom: 48px;
+  display: flex;
+  flex-direction: column;
 }
 .footer__social {
   display: flex;
@@ -137,7 +185,7 @@ form {
   grid-row-gap: 16px;
 }
 .footer__logo {
-  margin-top: 32px;
+  margin-top: 2rem;
   height: 3rem;
 }
 .social__image {
@@ -148,7 +196,40 @@ form {
   display: flex;
   flex-direction: column;
 }
-/* Footer */
+.list {
+  color: #b8bfd6;
+  list-style: none;
+  /* padding-bottom: 2rem;
+  margin-bottom: 2rem; */
+}
+a {
+  color: #b8bfd6;
+  text-decoration: none;
+}
+.footer__section {
+  display: flex;
+  flex-direction: column;
+}
+.footer__sections {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+}
+.content_block {
+  grid-column-gap: 105px;
+  grid-row-gap: 16px;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 2fr;
+  grid-auto-columns: 1fr;
+  margin-bottom: 60px;
+  display: grid;
+}
+.footer__section li {
+  margin-bottom: 1rem;
+}
+.footer__section h2 {
+  margin-bottom: 1rem;
+}
+/* Footer
 .footer {
   background: #232323;
 }
@@ -208,4 +289,4 @@ form {
   .footer__heading {
     font-size: 1.6rem;
   }
-}
+} */
