--- a/demo_web/css/styles.css
+++ b/demo_web/css/styles.css
@@ -25,6 +25,11 @@ form {
   margin-top: 0em;
   unicode-bidi: isolate;
 }
+.style_h3 {
+  text-shadow: 1px 1px 1px #000;
+  font-weight: 500;
+  line-height: 1;
+}
 h1,
 h2,
 h3,
@@ -34,6 +39,20 @@ h6 {
   margin-bottom: 10px;
   font-weight: 700;
 }
+h2 {
+  margin-top: 20px;
+  font-size: 32px;
+  line-height: 36px;
+}
+h2 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: IBM Plex Sans Condensed, sans-serif;
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
 h3 {
   margin-top: 20px;
   font-size: 24px;
@@ -45,6 +64,34 @@ h3 {
   font-size: 2rem;
   font-weight: 700;
   line-height: 1.2;
+}
+.gs-cta2 {
+  grid-column-gap: 8px;
+  color: var(--bg_dark);
+  background-color: #37ed81;
+  border: 2px solid #000;
+  border-radius: 12px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2px;
+  margin-left: 2px;
+  padding: 20px 26px;
+  font-size: 1.375rem;
+  font-weight: 500;
+  line-height: 1.3;
+  transition: all 0.5s;
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 3px 3px 1px #fff;
+  cursor: pointer;
+  height: 2rem;
+  width: 8rem;
+}
+.html_embed_90 {
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 /* footer */
 .div_full-block {
@@ -316,34 +363,35 @@ a {
     font-size: 1.6rem;
   }
 } */
+/* self placed program box */
+.style_h3 {
+  -webkit-text-stroke: 0.5px #fff;
+}
+.style_h3.program_type_name {
+  line-height: 1.2;
+}
+.text-block-263 {
+  color: rgba(3, 10, 33, 0.8);
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+.self_heading {
+  grid-row-gap: 24px;
+  flex-direction: column;
+  margin-top: 44px;
+  margin-bottom: 44px;
+  display: flex;
+}
+.self_placed_header {
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+}
+.html_embed_90 {
+  height: 1rem;
+  width: 1rem;
+}
 /* cards */
-.card {
-  border-radius: 7px;
-  box-shadow: 0 0 20px 10px #f3f3f3;
-  overflow: hidden;
-}
-
-.card__header,
-.card__body {
-  padding: 2rem 3rem;
-}
-
-.card--primary .card__header {
-  background: #2584ff;
-  color: #fff;
-}
-
-.card--secondary .card__header {
-  background: #00d9ff;
-  color: #fff;
-}
-
-.card--primary .badge--primary {
-  background: #126de4;
-}
-.card--secondary .badge--secondary {
-  background: #02cdf1;
-}
 .short_program_card {
   background-position: 170% 100%;
   background-repeat: no-repeat;
@@ -462,4 +510,34 @@ a {
 }
 .short_program_card.is_masterclasses.is_buynow {
   height: 300px;
+}
+.booster {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  padding: 4px 8px;
+  display: flex;
+}
+.booster.is_light_yellow {
+  color: #766213;
+  background-color: rgba(203, 177, 73, 0.2);
+  border-color: rgba(121, 104, 34, 0.3);
+}
+.boosters_list {
+  z-index: 4;
+  grid-column-gap: 16px;
+  display: flex;
+  position: absolute;
+  top: 20px;
+  bottom: auto;
+  left: 32px;
+  right: auto;
+}
+.boosters_list.is_extensive {
+  white-space: nowrap;
+  font-size: 0.75rem;
+  font-weight: 500;
+  line-height: 1.4;
+  display: flex;
+  left: 24px;
 }
