--- a/demo_web/css/styles.css
+++ b/demo_web/css/styles.css
@@ -65,6 +65,14 @@ h3 {
   font-weight: 700;
   line-height: 1.2;
 }
+a {
+  color: #b8bfd6;
+  text-decoration: none;
+}
+.page_padding2 {
+  padding-left: 120px;
+  padding-right: 120px;
+}
 .gs-cta2 {
   grid-column-gap: 8px;
   color: var(--bg_dark);
@@ -85,8 +93,6 @@ h3 {
   overflow: hidden;
   box-shadow: 3px 3px 1px #fff;
   cursor: pointer;
-  height: 2rem;
-  width: 8rem;
 }
 .html_embed_90 {
   justify-content: center;
@@ -199,30 +205,6 @@ h3 {
   margin-bottom: 0;
   font-size: 1rem;
 }
-
-.gs-cta2 {
-  grid-column-gap: 8px;
-  color: var(--bg_dark);
-  background-color: #37ed81;
-  border: 2px solid #000;
-  border-radius: 12px;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2px;
-  margin-left: 2px;
-  padding: 20px 26px;
-  font-size: 1.375rem;
-  font-weight: 500;
-  line-height: 1.3;
-  transition: all 0.5s;
-  display: flex;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 3px 3px 1px #fff;
-  cursor: pointer;
-  height: 2rem;
-  width: 8rem;
-}
 .form-2 {
   grid-column-gap: 10px;
   min-width: 20rem;
@@ -275,10 +257,7 @@ h3 {
   /* padding-bottom: 2rem;
   margin-bottom: 2rem; */
 }
-a {
-  color: #b8bfd6;
-  text-decoration: none;
-}
+
 .footer__section {
   display: flex;
   flex-direction: column;
@@ -301,6 +280,10 @@ a {
 }
 .footer__section h2 {
   margin-bottom: 1rem;
+}
+.btn__accent {
+  height: 2rem;
+  width: 8rem;
 }
 /* Footer
 .footer {
@@ -390,6 +373,22 @@ a {
 .html_embed_90 {
   height: 1rem;
   width: 1rem;
+}
+.gs-cta2.weighjt_400 {
+  font-weight: 400;
+  max-width: 100%;
+}
+.self_placed_header {
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+}
+.self_placed_program {
+  background-image: url(https://cdn.prod.website-files.com/624194472db3153002097068/63f1f7cff2b8ff576a3826c5_Grid%2040.svg);
+  background-position: 0 0;
+  background-repeat: repeat;
+  background-size: auto;
+  padding-bottom: 1px;
 }
 /* cards */
 .short_program_card {
@@ -540,4 +539,26 @@ a {
   line-height: 1.4;
   display: flex;
   left: 24px;
+}
+/* Feature */
+
+.feature_heading {
+  grid-row-gap: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+  display: flex;
+}
+.investor_logo {
+  border: 2px solid var(--bg_dark);
+  background-color: #fff;
+  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 120px;
+  margin: 20px 0;
+  padding: 32px 36px;
+  display: flex;
 }
