taking pics for group

--- a/demo_web/components/footer.html
+++ b/demo_web/components/footer.html
@@ -42,7 +42,7 @@
                       type="email"
                       placeholder="Enter your email"
                     />
-                    <button class="btn gs-cta2 btn--accent" href="#">
+                    <button class="btn gs-cta2 btn__accent" href="#">
                       Subscribe
                     </button>
                   </form>
