--- a/demo_web/css/styles.css
+++ b/demo_web/css/styles.css
@@ -712,3 +712,125 @@ a {
   max-height: 1.75rem;
   object-fit: contain;
 }
+/* Extensive and crash card */
+.short_program_card.purple_color {
+  color: #fff;
+  background: linear-gradient(
+    90deg,
+    rgba(38, 27, 71, 1) 0%,
+    rgba(22, 22, 22, 1) 100%
+  );
+}
+.text-block-267 {
+  color: rgba(251, 252, 255, 0.7);
+  font-size: 0.75rem;
+
+  line-height: 1.2;
+}
+.cap_price {
+  letter-spacing: -0.02em;
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+.box_image {
+  width: 20px;
+  height: 20px;
+}
+
+.months {
+  display: flex;
+  align-items: center;
+  grid-column-gap: 8px;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.4;
+}
+.box_image_text {
+  display: flex;
+}
+.preview_link.is_purple {
+  color: hsla(280.81632653061223, 100%, 71.18%, 1);
+}
+.is_light_green {
+  color: #b4ffb2;
+  background-color: rgba(61, 153, 59, 0.2);
+  border-color: rgba(101, 255, 98, 0.3);
+}
+.extensice_mentor {
+  z-index: 1;
+  justify-content: flex-end;
+  align-self: flex-end;
+  width: 116%;
+  height: 250px;
+  display: flex;
+  position: absolute;
+  top: auto;
+  bottom: 0%;
+  left: auto;
+  right: 0%;
+}
+.extensice_mentor.is_extensive {
+  width: auto;
+  max-width: none;
+  height: 136px;
+  position: absolute;
+  top: auto;
+  bottom: 0%;
+  left: auto;
+  right: 0%;
+}
+.extensice_mentor_image {
+  width: 120px;
+  position: relative;
+}
+.extensice_mentor_image.other {
+  margin-right: -36px;
+}
+.extensive_image {
+  height: 100%;
+}
+.extensice_mentor_name {
+  z-index: 2;
+  grid-row-gap: 2px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: absolute;
+  top: auto;
+  bottom: -16px;
+  left: 0%;
+  right: 0%;
+}
+.extensice_mentor_name.is_cap_card {
+  grid-row-gap: 12px;
+  bottom: 20px;
+}
+.extensice_name {
+  color: #f4f4f4;
+  font-weight: 500;
+  line-height: 1.4;
+}
+.extensice_background {
+  background-color: hsla(280.81632653061223, 100%, 71.18%, 1);
+  z-index: -1;
+  opacity: 0.24;
+  border-radius: 100rem;
+  width: 100%;
+  height: 35rem;
+  position: absolute;
+  top: 40px;
+}
+.extencise_background_box {
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 59%,
+    var(--bg_dark) 96%
+  );
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
