--- a/demo_web/css/styles.css
+++ b/demo_web/css/styles.css
@@ -1003,3 +1003,180 @@ a {
   align-items: center;
   justify-content: space-between;
 }
+/* learning section */
+.learning_section {
+  background-color: var(--bg_dark);
+  color: #fff;
+}
+.marque_section {
+  padding-bottom: 80px;
+  position: relative;
+}
+.learn_section {
+  grid-row-gap: 80px;
+  flex-direction: column;
+  align-items: stretch;
+  padding-top: 80px;
+  display: flex;
+}
+.learning_heading {
+  font-size: 3rem;
+  font-weight: 500;
+  text-align: center;
+}
+.learning_see {
+  z-index: 6;
+  grid-column-gap: 3px;
+  cursor: pointer;
+  align-self: flex-start;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1;
+  display: flex;
+  position: relative;
+}
+.learning_see.Learn {
+  color: var(--acid-green);
+  align-self: center;
+}
+.reviews {
+  flex-flow: wrap;
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-columns: 1fr;
+  place-content: flex-start;
+  align-items: flex-start;
+  display: flex;
+  margin: 0px -12px;
+}
+.reviews.homepage {
+  justify-content: center;
+  align-items: flex-start;
+  max-width: 1440px;
+  margin-bottom: 80px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.review_columns {
+  flex: 1 1 0%;
+  min-width: 300px;
+}
+.review_item {
+  border: 1px solid var(--bg_dark);
+  border-radius: 30px;
+  max-width: 31.5%;
+  margin-bottom: 2rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  padding-left: 0;
+  padding-right: 0;
+  overflow: hidden;
+}
+.review_item.homepage {
+  box-shadow: 1px 1px 0 0 var(--bg_dark), 3px 3px 0 0 #b8bfd6;
+  color: #000;
+  background-color: #fff;
+  border-style: solid;
+  border-color: #fff;
+  border-radius: 12px;
+  max-width: none;
+  margin-bottom: 2.5rem;
+  margin-left: 0;
+  margin-right: 0;
+}
+.review_block_head {
+  grid-column-gap: 8px;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 20px;
+  display: flex;
+}
+.review_image {
+  border: 1px solid var(--bg_dark);
+  border-radius: 20rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  overflow: hidden;
+}
+.review_image.is_new {
+  width: 3rem;
+  height: 3rem;
+}
+.review_header {
+  flex: 1;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  display: flex;
+}
+.margin_bottom {
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+.reviewer_name {
+  font-weight: 500;
+  line-height: 1.2;
+}
+.desgination {
+  align-items: center;
+  margin-bottom: 0;
+  display: flex;
+}
+.desgination_name {
+  font-size: 0.875rem;
+  color: gray;
+}
+.review_block_content {
+  margin: 20px;
+}
+.learners_review {
+  display: flex;
+  justify-content: center;
+}
+.parctitioner_card {
+  margin: 0 20px 32px 20px;
+  position: relative;
+}
+.parctitioner_image {
+  border: 1px solid #ffffff4d;
+  border-radius: 12px;
+  width: 240px;
+  height: 320px;
+  position: relative;
+  overflow: hidden;
+}
+.partitioner_image_gradient {
+  z-index: 1;
+  background-image: linear-gradient(to bottom, #030a2100 22%, var(--bg_dark));
+  position: absolute;
+  inset: 0%;
+}
+.parctitioner_name {
+  color: #f4f4f4;
+  font-weight: 500;
+  line-height: 1.4;
+}
+.parctitioner_desgination {
+  opacity: 0.7;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.4;
+}
+.parctitioner_logo {
+  border: 1px solid var(--bg_dark);
+  background-color: #fff;
+  border-radius: 4px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 32px;
+  margin-top: 12px;
+  padding: 8px 20px;
+  display: flex;
+}
+.practitioner_logo_image{
+  object-fit: contain;
+  max-height: 1.2rem;
+}
