--- a/demo_web/css/styles.css
+++ b/demo_web/css/styles.css
@@ -1153,7 +1153,7 @@ a {
   position: absolute;
   inset: 0%;
 }
-.parctitioner_name {
+.parctitioner_logo {
   color: #f4f4f4;
   font-weight: 500;
   line-height: 1.4;
@@ -1176,7 +1176,236 @@ a {
   padding: 8px 20px;
   display: flex;
 }
-.practitioner_logo_image{
+.practitioner_logo_image {
   object-fit: contain;
   max-height: 1.2rem;
+}
+/* Main Page  */
+.main_page {
+  background-color: var(--bg_dark);
+  color: #fff;
+  background-image: url(https://cdn.prod.website-files.com/624194472db3153002097068/63f1e9eb466e6276115b1719_Grid%2080.svg),
+    url(https://cdn.prod.website-files.com/624194472db3153002097068/63f1e9eb466e6276115b1719_Grid%2080.svg);
+  background-position: 100%, 0%;
+  background-repeat: no-repeat, no-repeat;
+  background-size: auto, auto;
+  padding-top: 160px;
+  position: relative;
+}
+.main_page_image {
+  z-index: 0;
+  width: 50vw;
+  height: 60vh;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  inset: auto 0% 0%;
+}
+.main_page_gradient {
+  z-index: 0;
+  filter: blur(500px);
+  background-color: #1b3452;
+  width: 27rem;
+  max-width: 27rem;
+  height: 60%;
+  position: absolute;
+  inset: 0% auto auto 0%;
+}
+.main_page_text_block {
+  text-align: center;
+}
+.main_page_text_area {
+  z-index: 1;
+  flex-direction: column;
+  align-items: center;
+  max-width: 660px;
+  margin-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  position: relative;
+}
+.main_head {
+  margin-bottom: 16px;
+}
+.main_heading1 {
+  text-shadow: 1px 1px 1px #fff;
+  font-size: 5rem;
+  font-weight: 500;
+  line-height: 117%;
+  display: inline;
+  -webkit-text-stroke: 1px #000;
+}
+
+.main_heading2 {
+  color: var(--acid-green);
+  margin-left: 12px;
+}
+.main_body_text {
+  grid-column-gap: 4px;
+  color: #fffc;
+  margin-bottom: 40px;
+  font-size: 1.25rem;
+}
+.body_text {
+  display: inline;
+}
+.main_button {
+  z-index: 2;
+  position: relative;
+}
+.main_photo_block {
+  justify-content: center;
+  display: flex;
+}
+.photo_list {
+  z-index: 2;
+  flex-flow: row;
+  justify-content: center;
+  align-items: flex-end;
+  display: flex;
+}
+.header_mentor {
+  justify-content: center;
+  width: 240px;
+  display: flex;
+  position: relative;
+}
+.photo_block {
+  z-index: 1;
+  background-image: linear-gradient(to bottom, transparent 59%, var(--bg_dark));
+  width: 100vw;
+  height: 240px;
+  position: absolute;
+  inset: auto 0% 0%;
+}
+.main_image {
+  height: 100%;
+}
+.mentor_image.main_block {
+  filter: grayscale();
+  object-fit: contain;
+  object-position: 50% 50%;
+  background-color: #0000;
+}
+.main_image_logo {
+  border: 1px solid var(--bg_dark);
+  background-color: #fff;
+  border-radius: 4px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 32px;
+  margin-top: 12px;
+  padding: 8px 20px;
+  display: flex;
+}
+.image_logo {
+  filter: invert();
+  object-fit: contain;
+  max-width: 6rem;
+  height: 100%;
+}
+/* NavBar */
+.navbar {
+  z-index: 200;
+  flex-direction: column;
+  display: flex;
+  position: fixed;
+  inset: 0% 0% auto;
+}
+.nav_bar {
+  z-index: 200;
+  background-color: #030a21;
+  position: relative;
+  inset: 0% 0% auto;
+}
+.nav_block {
+  z-index: 200;
+  color: #fff;
+  justify-content: space-between;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px 48px;
+  display: flex;
+  position: relative;
+}
+.nav_left {
+  grid-column-gap: 56px;
+  align-items: center;
+  display: flex;
+}
+.nav_right {
+  grid-column-gap: 20px;
+  align-items: center;
+  display: flex;
+}
+.growth_logo {
+  width: 7rem;
+  max-width: 100%;
+  display: inline-block;
+}
+.nav_link2 {
+  font-weight: 500;
+  line-height: 1.3;
+}
+.nav_link2.is_link {
+  color: #fff;
+  border: 2px solid #fff3;
+  border-radius: 8px;
+  padding: 9px 20px;
+}
+.nav_link2.is_link:hover {
+  color: #000;
+  background-color: #fff;
+}
+.skills {
+  grid-column-gap: 32px;
+  align-items: center;
+  display: flex;
+}
+.nav_link2.is_link1 {
+  color: #fff;
+}
+.dropdown {
+  text-align: left;
+  z-index: 900;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-block;
+  position: relative;
+}
+.dropdown_toggle {
+  vertical-align: top;
+  color: #222;
+  text-align: left;
+  white-space: nowrap;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  text-decoration: none;
+  position: relative;
+  -webkit-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  padding-right: 40px;
+  display: inline-block;
+}
+.dropdown_list {
+  grid-column-gap: 10px;
+  color: #fff;
+  border: 2px solid #fff3;
+  border-radius: 8px;
+  padding: 9px 20px;
+  font-weight: 500;
+  display: flex;
+}
+.dropdown_svg {
+  fill: white;
+  transform: rotate(90deg);
+}
+.dropdown_list:hover {
+  color: #000;
+  background-color: #fff;
 }
